Implementing some more test cases. Anisotropic solid elements look like they're unstable when they have pressure/continuous pressure. Need to look into why this is

--- a/test_anisotropic_solid/Makefile.am
+++ b/test_anisotropic_solid/Makefile.am
@@ -2,16 +2,26 @@
 # include $(top_srcdir)/config/makefile_templates/demo_drivers
 # Name of executables that should run during the self-test
 noinst_PROGRAMS= \
- cubic
+ cantilever_beam \
+ cube_hang \
+ beam_contraction
 
 # Sources for executable
-cubic_SOURCES = cubic.cc \
-                anisotropic_test_law.h
+cantilever_beam_SOURCES = cantilever_beam.cc \
+                          anisotropic_test_law.h
+cube_hang_SOURCES = cube_hang.cc \
+                    anisotropic_test_law.h
+beam_contraction_SOURCES = beam_contraction.cc \
+                           anisotropic_test_law.h
 
 
 # Required libraries:
 # $(FLIBS) is included in case the solver involves fortran sources.
-cubic_LDADD = -L@libdir@ -lanisotropic_solid -lanisotropic_constitutive -lsolid -lconstitutive -lmeshes -lgeneric \
+cantilever_beam_LDADD = -L@libdir@ -lanisotropic_solid -lanisotropic_constitutive -lsolid -lconstitutive -lmeshes -lgeneric \
+				$(EXTERNAL_LIBS) $(FLIBS)
+cube_hang_LDADD = -L@libdir@ -lanisotropic_solid -lanisotropic_constitutive -lsolid -lconstitutive -lmeshes -lgeneric \
+				$(EXTERNAL_LIBS) $(FLIBS)
+beam_contraction_LDADD = -L@libdir@ -lanisotropic_solid -lanisotropic_constitutive -lsolid -lconstitutive -lmeshes -lgeneric \
 				$(EXTERNAL_LIBS) $(FLIBS)
 
 
